# pelican-za

./: Makefile  pelicanconf.py  pyproject.toml  tasks.py
content/pages/: about.md
content/pages/blog/: baz.md  foo.md
content/pages/book reviews/: bar.md
output/: archives.html  authors.html  categories.html  first-blog.html  first-review.html  index.html  tags.html
output/author/: zach-valenta.html
output/category/: blog.html  book-reviews.html
output/drafts/: draft-blog.html
output/drafts/pages/: draft-blog.html
output/pages/: about.html  first-blog.html  first-review.html
