[tool.poetry]
name = "zjayv"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pelican = {extras = ["markdown"], version = "^4.9.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
